// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with different props 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  margin: 1rem 0 -0.25rem 0;
  padding: 0.25rem 1rem;
  text-align: left;
  color: green;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  color: var(--link-blue);
  padding: 0.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  margin: 1rem 0 -0.25rem 0;
  padding: 0.25rem 1rem;
  text-align: left;
  color: green;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
    class="emotion-0"
    href="#caution-1"
  >
    <strong>
      My caution
    </strong>
  </a>
  .emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid green;
  text-align: left;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

.emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid green;
  text-align: left;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

<div
    class="emotion-0"
    data-testid="caution"
    id="caution-1"
  />
</DocumentFragment>
`;

exports[`Renders without error 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid rgba(218,165,32,1);
  text-align: left;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

.emotion-0 {
  margin: 0.75rem;
  padding: 1.5rem 2rem;
  border-radius: 12px;
  border: 2px solid rgba(218,165,32,1);
  text-align: left;
  font-size: 1rem;
}

@media only screen and (min-width:640px) {
  .emotion-0 {
    font-size: 1.1rem;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
